Save state dev on first develpment of this new functionnalities. Erternal Services answer to interrogate any remote endpoint linking the local askomics endpoint

--- a/configs/development.fuseki.ini
+++ b/configs/development.fuseki.ini
@@ -28,8 +28,8 @@ pyramid.includes =
 # Le graph Askomics. Peux etre modifie pour la gestion de plusieurs bdd
 askomics.graph=urn:sparql:tests-askomics:insert:informative1
 
-askomics.prefix = http://www.semanticweb.org/irisa/ontologies/2016/1/igepp-ontology#
-askomics.display_setting = http://www.irisa.fr/dyliss/rdfVisualization/display
+askomics.prefix           = http://www.semanticweb.org/INRA/igepp/ontologies/2016/1#
+askomics.askomicsns       = http://www.semanticweb.org/askomicsns/setting#
 
 askomics.overview_lines_limit = 11
 askomics.allowed_file_types = 'text/plain','text/csv','text/tab-separated-values','text/fasta'
