--- a/configs/development.ini
+++ b/configs/development.ini
@@ -79,8 +79,8 @@ askomics.hack_virtuoso=true
 #askomics.updatepoint = http://localhost:8080/openrdf-sesame/repositories/SYSTEM/statements
 #========================================================================
 
-askomics.prefix = http://www.semanticweb.org/irisa/ontologies/2016/1/igepp-ontology#
-askomics.display_setting = http://www.irisa.fr/dyliss/rdfVisualization/display
+askomics.prefix           = http://www.semanticweb.org/INRA/igepp/ontologies/2016/1#
+askomics.askomicsns       = http://www.semanticweb.org/askomicsns/setting#
 
 askomics.overview_lines_limit = 11
 askomics.allowed_file_types = 'text/plain','text/csv','text/tab-separated-values','text/fasta'
