--- a/configs/development.virtuoso.ini
+++ b/configs/development.virtuoso.ini
@@ -27,8 +27,8 @@ askomics.endpoint = http://localhost:8890/sparql
 askomics.max_content_size_to_update_database=500000
 askomics.hack_virtuoso=true
 
-askomics.prefix = http://www.semanticweb.org/irisa/ontologies/2016/1/igepp-ontology#
-askomics.display_setting = http://www.irisa.fr/dyliss/rdfVisualization/display
+askomics.prefix           = http://www.semanticweb.org/INRA/igepp/ontologies/2016/1#
+askomics.askomicsns       = http://www.semanticweb.org/askomicsns/setting#
 
 askomics.overview_lines_limit = 11
 askomics.allowed_file_types = 'text/plain','text/csv','text/tab-separated-values','text/fasta'
